--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
-ul, ol {
-   list-style: none;
+ul,
+ol {
+  list-style: none;
 }
 a {
-   text-decoration: none;
-   color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
