--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,23 @@ a {
   text-decoration: none;
   color: inherit;
 }
+@font-face {
+   font-family: "Aleo";
+   src: url(../fonts/Aleo-Regular.ttf);
+   font-weight: 400;
+}
+@font-face {
+   font-family: "Josefin Sans";
+   src: url(../fonts/JosefinSans-Light.ttf);
+   font-weight: 300;
+}
+@font-face {
+   font-family: "Josefin Sans";
+   src: url(../fonts/JosefinSans-Regular.ttf);
+   font-weight:400;
+}
+@font-face {
+   font-family: "Josefin Sans";
+   src: url(../fonts/JosefinSans-Bold.ttf);
+   font-weight: 700;
+}
