--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,36 @@
+@font-face {
+  font-family: "Aleo";
+  src: url(../fonts/Aleo-Regular.ttf);
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Josefin Sans";
+  src: url(../fonts/JosefinSans-Light.ttf);
+  font-weight: 300;
+}
+@font-face {
+  font-family: "Josefin Sans";
+  src: url(../fonts/JosefinSans-Regular.ttf);
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Josefin Sans";
+  src: url(../fonts/JosefinSans-Bold.ttf);
+  font-weight: 700;
+}
+* {
+  padding: 0;
+  margin: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding: 0;
+  margin: 0;
+}
 ul,
 ol {
   list-style: none;
@@ -6,23 +39,8 @@ a {
   text-decoration: none;
   color: inherit;
 }
-@font-face {
-   font-family: "Aleo";
-   src: url(../fonts/Aleo-Regular.ttf);
-   font-weight: 400;
-}
-@font-face {
-   font-family: "Josefin Sans";
-   src: url(../fonts/JosefinSans-Light.ttf);
-   font-weight: 300;
-}
-@font-face {
-   font-family: "Josefin Sans";
-   src: url(../fonts/JosefinSans-Regular.ttf);
-   font-weight:400;
-}
-@font-face {
-   font-family: "Josefin Sans";
-   src: url(../fonts/JosefinSans-Bold.ttf);
-   font-weight: 700;
+[class*="__container"] {
+  max-width: 1320px;
+  width: 100%;
+  margin: 0 auto;
 }
